# UDPChat

./: README.md
Client/: CMakeLists.txt  chat_message.hpp  client.hpp  connection.hpp  main.cpp  query.hpp  socket.hpp  strings.hpp
Client/src/: client.cpp  socket.cpp
Client/states/: chating_state.hpp  connected_state.hpp  empty_state.hpp  state.hpp
Client/states/src/: chatting_state.cpp  connected_state.cpp  empty_state.cpp  state.cpp
Server/: CMakeLists.txt  chat_message.hpp  main.cpp  participant.hpp  room.hpp  server.hpp  session.hpp
